--- a/classes/Benelux.html
+++ b/classes/Benelux.html
@@ -34,10 +34,10 @@
             <a href="../files/lib/benelux/mark_rb.html">lib/benelux/mark.rb</a>
           </li>
           <li class='other'>
-            <a href="../files/lib/benelux/range_rb.html">lib/benelux/range.rb</a>
+            <a href="../files/lib/benelux/packer_rb.html">lib/benelux/packer.rb</a>
           </li>
           <li class='other'>
-            <a href="../files/lib/benelux/packer_rb.html">lib/benelux/packer.rb</a>
+            <a href="../files/lib/benelux/range_rb.html">lib/benelux/range.rb</a>
           </li>
           <li class='other'>
             <a href="../files/lib/benelux/stats_rb.html">lib/benelux/stats.rb</a>
@@ -111,7 +111,7 @@
                   <tr class='top-aligned-row context-row'>
                     <td class='context-item-name'>VERSION</td>
                     <td>=</td>
-                    <td class='context-item-value'>&quot;0.5.10&quot;</td>
+                    <td class='context-item-value'>&quot;0.5.11&quot;</td>
                   </tr>
                   <tr class='top-aligned-row context-row'>
                     <td class='context-item-name'>NOTSUPPORTED</td>
@@ -417,7 +417,7 @@
                   <a class='source-toggle' href='#' onclick="toggleCode('M000005-source'); return false">
                     [show source]
                   </a>
-                  <pre id='M000005-source'>    <span class="ruby-comment cmt"># File lib/benelux.rb, line 33</span>&#x000A;33:   <span class="ruby-keyword kw">def</span> <span class="ruby-constant">Benelux</span>.<span class="ruby-identifier">reset</span>&#x000A;34:     <span class="ruby-ivar">@packed_methods</span> = {}&#x000A;35:     <span class="ruby-ivar">@tracks</span> = <span class="ruby-constant">SelectableHash</span>.<span class="ruby-identifier">new</span>&#x000A;36:     <span class="ruby-ivar">@timeline</span> = <span class="ruby-constant">Timeline</span>.<span class="ruby-identifier">new</span>&#x000A;37:     <span class="ruby-ivar">@timeline_chunk</span> = <span class="ruby-constant">Timeline</span>.<span class="ruby-identifier">new</span>  <span class="ruby-comment cmt"># See: update_global_timeline</span>&#x000A;38:     <span class="ruby-ivar">@timeline_updates</span> = <span class="ruby-value">0</span>&#x000A;39:     <span class="ruby-ivar">@known_threads</span> = []&#x000A;40:     <span class="ruby-ivar">@processed_dead_threads</span> = []&#x000A;41:   <span class="ruby-keyword kw">end</span></pre>
+                  <pre id='M000005-source'>    <span class="ruby-comment cmt"># File lib/benelux.rb, line 34</span>&#x000A;34:   <span class="ruby-keyword kw">def</span> <span class="ruby-constant">Benelux</span>.<span class="ruby-identifier">reset</span>&#x000A;35:     <span class="ruby-ivar">@tracks</span> = <span class="ruby-constant">SelectableHash</span>.<span class="ruby-identifier">new</span>&#x000A;36:     <span class="ruby-ivar">@timeline</span> = <span class="ruby-constant">Timeline</span>.<span class="ruby-identifier">new</span>&#x000A;37:     <span class="ruby-ivar">@timeline_chunk</span> = <span class="ruby-constant">Timeline</span>.<span class="ruby-identifier">new</span>  <span class="ruby-comment cmt"># See: update_global_timeline</span>&#x000A;38:     <span class="ruby-ivar">@timeline_updates</span> = <span class="ruby-value">0</span>&#x000A;39:     <span class="ruby-ivar">@known_threads</span> = []&#x000A;40:     <span class="ruby-ivar">@processed_dead_threads</span> = []&#x000A;41:   <span class="ruby-keyword kw">end</span></pre>
                 </div>
               </div>
               <div class='method public-class' id='method-M000016'>
