--- a/files/CHANGES_txt.html
+++ b/files/CHANGES_txt.html
@@ -31,7 +31,7 @@
         </div>
         <div class='last-update'>
           Last Update:
-          <span class='datetime'>2010-03-15 08:33:55 -0400</span>
+          <span class='datetime'>2010-03-15 11:59:11 -0400</span>
         </div>
       </div>
       <div id='content'>
@@ -41,7 +41,15 @@
             BENELUX, CHANGES
             </p>
             <p>
-            #### 0.5.10 (2010-03-15) ###############################
+            #### 0.5.11 (2010-03-15) ##############################
+            </p>
+            <ul>
+            <li>FIXED: Don&#8217;t reset packed_methods!
+            
+            </li>
+            </ul>
+            <p>
+            #### 0.5.10 (2010-03-15) ##############################
             </p>
             <ul>
             <li>ADDED: <a href="../classes/Benelux.html#M000005">Benelux.reset</a>
