--- a/files/lib/benelux_rb.html
+++ b/files/lib/benelux_rb.html
@@ -31,7 +31,7 @@
         </div>
         <div class='last-update'>
           Last Update:
-          <span class='datetime'>2010-03-23 18:19:25 -0400</span>
+          <span class='datetime'>2010-04-03 20:35:46 -0400</span>
         </div>
       </div>
       <div id='content'>
@@ -44,6 +44,7 @@
                 <li>thread</li>
                 <li>thwait</li>
                 <li>selectable</li>
+                <li>storable</li>
                 <li>benelux/mark</li>
                 <li>benelux/track</li>
                 <li>benelux/range</li>
