--- a/files/CHANGES_txt.html
+++ b/files/CHANGES_txt.html
@@ -31,7 +31,7 @@
         </div>
         <div class='last-update'>
           Last Update:
-          <span class='datetime'>2010-03-23 18:19:20 -0400</span>
+          <span class='datetime'>2010-04-03 20:35:42 -0400</span>
         </div>
       </div>
       <div id='content'>
@@ -40,6 +40,14 @@
             <p>
             BENELUX, CHANGES
             </p>
+            <p>
+            #### 0.5.15 (2010-04-03) ##############################
+            </p>
+            <ul>
+            <li>FIXED: require &#8216;storable&#8217;. Rookie!
+            
+            </li>
+            </ul>
             <p>
             #### 0.5.14 (2010-03-23) ##############################
             </p>
