--- a/classes/TaggableString.html
+++ b/classes/TaggableString.html
@@ -41,6 +41,13 @@
       </div>
       <div id='content'>
         <div id='text'>
+          <div id='method-list'>
+            <h2>Methods</h2>
+            <h3>public class</h3>
+            <ol>
+              <li><a href="#M000005">new</a></li>
+            </ol>
+          </div>
           <div id='context'>
             <div id='includes'>
               <h2>Included modules</h2>
@@ -50,6 +57,22 @@
             </div>
           </div>
           <div id='section'>
+            <div id='methods'>
+              <h2>Public class methods</h2>
+              <div class='method public-class' id='method-M000005'>
+                <a name='M000005'>      </a>
+                <div class='synopsis'>
+                  <span class='name'>new</span>
+                  <span class='arguments'>(str, tags={})</span>
+                </div>
+                <div class='source'>
+                  <a class='source-toggle' href='#' onclick="toggleCode('M000005-source'); return false">
+                    [show source]
+                  </a>
+                  <pre id='M000005-source'>    <span class="ruby-comment cmt"># File lib/selectable.rb, line 90</span>&#x000A;90:   <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">initialize</span>(<span class="ruby-identifier">str</span>, <span class="ruby-identifier">tags</span>={})&#x000A;91:     <span class="ruby-keyword kw">super</span>(<span class="ruby-identifier">str</span>)&#x000A;92:     <span class="ruby-identifier">add_tags</span> <span class="ruby-identifier">tags</span> <span class="ruby-keyword kw">unless</span> <span class="ruby-identifier">tags</span>.<span class="ruby-identifier">empty?</span>&#x000A;93:   <span class="ruby-keyword kw">end</span></pre>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
