--- a/files/CHANGES_txt.html
+++ b/files/CHANGES_txt.html
@@ -31,7 +31,7 @@
         </div>
         <div class='last-update'>
           Last Update:
-          <span class='datetime'>2010-09-05 10:18:29 -0400</span>
+          <span class='datetime'>2011-02-11 03:52:44 -0500</span>
         </div>
       </div>
       <div id='content'>
@@ -40,6 +40,16 @@
             <p>
             BENELUX, CHANGES
             </p>
+            <p>
+            #### 0.6.1 (2011-02-11) ##############################
+            </p>
+            <ul>
+            <li>FIXED: Fix for segfault in Ruby 1.9.2 (Don&#8217;t use attic in <a
+            href="../classes/Thread.html">Thread</a>).
+            
+            <pre>See http://redmine.ruby-lang.org/issues/show/4389</pre>
+            </li>
+            </ul>
             <p>
             #### 0.6.0 (2010-09-05) ##############################
             </p>
